--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello World - Updated</h1>
+    <h1>New Website</h1>
     <script src="app.js"></script>
 </body>
 </html>
